logs/dag_id=save_city_info_weather_v01/run_id=manual__2024-09-14T20:14:33.494836+00:00/task_id=insert_data/attempt=6.log
[2024-09-14T20:39:46.218+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: save_city_info_weather_v01.insert_data manual__2024-09-14T20:14:33.494836+00:00 [queued]>
[2024-09-14T20:39:46.225+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: save_city_info_weather_v01.insert_data manual__2024-09-14T20:14:33.494836+00:00 [queued]>
[2024-09-14T20:39:46.225+0000] {taskinstance.py:1283} INFO - 
--------------------------------------------------------------------------------
[2024-09-14T20:39:46.226+0000] {taskinstance.py:1284} INFO - Starting attempt 6 of 6
[2024-09-14T20:39:46.226+0000] {taskinstance.py:1285} INFO - 
--------------------------------------------------------------------------------
[2024-09-14T20:39:46.233+0000] {taskinstance.py:1304} INFO - Executing <Task(PostgresOperator): insert_data> on 2024-09-14 20:14:33.494836+00:00
[2024-09-14T20:39:46.236+0000] {standard_task_runner.py:55} INFO - Started process 15681 to run task
[2024-09-14T20:39:46.239+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'save_city_info_weather_v01', 'insert_data', 'manual__2024-09-14T20:14:33.494836+00:00', '--job-id', '257', '--raw', '--subdir', 'DAGS_FOLDER/saver_info.py', '--cfg-path', '/tmp/tmpbcihxeq2']
[2024-09-14T20:39:46.240+0000] {standard_task_runner.py:83} INFO - Job 257: Subtask insert_data
[2024-09-14T20:39:46.277+0000] {task_command.py:389} INFO - Running <TaskInstance: save_city_info_weather_v01.insert_data manual__2024-09-14T20:14:33.494836+00:00 [running]> on host 0c5fe11d0c9c
[2024-09-14T20:39:46.313+0000] {taskinstance.py:1513} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=me
AIRFLOW_CTX_DAG_ID=save_city_info_weather_v01
AIRFLOW_CTX_TASK_ID=insert_data
AIRFLOW_CTX_EXECUTION_DATE=2024-09-14T20:14:33.494836+00:00
AIRFLOW_CTX_TRY_NUMBER=6
AIRFLOW_CTX_DAG_RUN_ID=manual__2024-09-14T20:14:33.494836+00:00
[2024-09-14T20:39:46.313+0000] {sql.py:253} INFO - Executing: insert into weathers (id, city_name, max_temp, min_temp, wind, description) values (2, "%(name)s", "%(max_temp)s", "$(min_temp)s", "%(wind)s", "%(description)s")
[2024-09-14T20:39:46.318+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-09-14T20:39:46.427+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-09-14T20:39:46.435+0000] {sql.py:364} INFO - Running statement: insert into weathers (id, city_name, max_temp, min_temp, wind, description) values (2, "%(name)s", "%(max_temp)s", "$(min_temp)s", "%(wind)s", "%(description)s"), parameters: {'name': '{{ti.xcom_pull(task_ids="fetcher_data", key="return_value")["name"]}}', 'max_temp': '{{ti.xcom_pull(task_ids="fetcher_data", key="return_value")["max_temp"]}}', 'min_temp': '{{ti.xcom_pull(task_ids="fetcher_data", key="return_value")["min_temp"]}}', 'wind': '{{ti.xcom_pull(task_ids="fetcher_data", key="return_value")["wind"]}}', 'description': '{{ti.xcom_pull(task_ids="fetcher_data", key="return_value")["description"]}}'}
[2024-09-14T20:39:46.436+0000] {taskinstance.py:1772} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 261, in execute
    return_last=self.return_last,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 338, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 367, in _run_command
    cur.execute(sql_statement, parameters)
psycopg2.errors.SyntaxError: syntax error at or near "fetcher_data"
LINE 1: ...escription) values (2, "'{{ti.xcom_pull(task_ids="fetcher_da...
                                                             ^

[2024-09-14T20:39:46.442+0000] {taskinstance.py:1327} INFO - Marking task as FAILED. dag_id=save_city_info_weather_v01, task_id=insert_data, execution_date=20240914T201433, start_date=20240914T203946, end_date=20240914T203946
[2024-09-14T20:39:46.450+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 257 for task insert_data (syntax error at or near "fetcher_data"
LINE 1: ...escription) values (2, "'{{ti.xcom_pull(task_ids="fetcher_da...
                                                             ^
; 15681)
[2024-09-14T20:39:46.465+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2024-09-14T20:39:46.475+0000] {taskinstance.py:2582} INFO - 0 downstream tasks scheduled from follow-on schedule check
